feat: Created the parent basic api to fetch all and create
